[tool.poetry]
name = "repl_nix_41123121githubio"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
javascript = "^2015.32.59"
fabric = "^3.1.0"
pelican = "^4.8.0"
Flask = "^2.3.2"
pytz = "^2023.3"
pygame = "^2.4.0"
Flask-Cors = "^3.0.10"
Pillow = "^9.5.0"
bs4 = "^0.0.1"
Jinja2 = "^3.1.2"
typogrify = "^2.0.7"
waitress = "^2.1.2"
pytest-browser = "^0.2.0"
gevent = "^22.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
